--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "lib": ["ES2016", "DOM"],
+    "target": "ES2021",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "lib": ["ES2021", "DOM"],
     "esModuleInterop": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
