--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cdt2d": "^1.0.0",
     "clean-pslg": "^1.1.2",
     "data-structure-typed": "^1.34.5",
+    "min-cost-flow": "^2.1.0",
     "typescript": "^5.2.2"
   }
 }
